# Desafio-Backend

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README-copy.md  README.md  docker-compose.yml  manage.py  pyproject.toml
mybank/: asgi.py  settings.py  urls.py  wsgi.py
src/: manage.py
src/api/: permissions.py  urls.py
src/api/services/: account.py  comment.py  deposit.py  transfer.py  users.py
src/app/: admin.py  apps.py  models.py  signals.py  urls.py
src/app/api/serializers/: account.py  (+4 more)
src/app/migrations/: 0001_initial.py
src/app/services/: account.py  comment.py  deposit.py  transfer.py  users.py
src/imo_banco/: asgi.py  settings.py  urls.py  wsgi.py
src/resources/: apps.py  models.py
src/resources/migrations/: 0001_initial.py  0002_account.py  0003_deposit.py  0004_transfer.py  0005_transfer_description.py  0006_remove_transfer_create_at_transfer_created_at.py  0007_comment.py
src/resources/models/: __init__.py  models_account.py  models_comment.py  models_deposit.py  models_transfer.py
src/resources/repositories/: account_repository.py  base_repository.py  comment_repository.py  deposity_repository.py  transfer_repository.py  user_repository.py
src/resources/serializers/: account_serialize.py  comment_serialize.py  deposit_serialize.py  transfer_serialize.py  user_serialize.py
src/tests/repositories/: tests_account.py  tests_comment.py  tests_deposit.py  tests_transfer.py  tests_users.py
src/tests/services/: tests_account.py  tests_comment.py  tests_deposit.py  tests_transfer.py  tests_users.py
(+20 files in other folders)
