[tool.poetry]
name = "desafio-backend"
version = "0.1.0"
description = ""
authors = ["jackteruya <jack.teruya@gmail.com>"]
readme = "README.md"
packages = [{include = "desafio_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.1.7"
djangorestframework = "3.14.0"
psycopg2-binary = "2.9.5"
django-cors-headers = "3.14.0"
python-dotenv = "1.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "6.0.0"
pytest = "^7.2.2"
isort = "5.12.0"
black = "23.1.0"
pre-commit = "3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
